--- a/Server/Views/components/header.ejs
+++ b/Server/Views/components/header.ejs
@@ -24,7 +24,7 @@
 
           <!-- Clothing List Secure area and Authentication Links -->
           <li class="nav-item">
-            <a class="nav-link" href="/clothing-list"><i class="fas fa-tshirt fa-lg"></i> Clothing List</a>
+            <a class="nav-link" href="/clothing-list"><i class="fas fa-tshirt fa-lg"></i> Business Contacts</a>
           </li>
 
 
