--- a/Server/Views/content/clothing-list.ejs
+++ b/Server/Views/content/clothing-list.ejs
@@ -6,18 +6,15 @@
 
 
         <% if(displayName) { %>
-        <a href="/clothing-list/add" id="addButton" class="btn btn-primary mb-1"><i class="fas fa-plus-circle"></i> Add Clothing Item</a>
+        <a href="/clothing-list/add" id="addButton" class="btn btn-primary mb-1"><i class="fas fa-plus-circle"></i> Add Contact</a>
         <% }%>
         <table class="table table-striped table-bordered table-hover">
             <thead >
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Name</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Category</th>
-                <th scope="col">Colour</th>
-                <th scope="col">Size</th>
-                <th scope="col">Price</th>
+                <th scope="col">Number</th>
+                <th scope="col">Email</th>
                 <% if(displayName) { %>
                 <th></th>
                 <th></th>
@@ -33,11 +30,8 @@
                 <tr>
                   <th scope="row"><%= count + 1 %></th>
                   <td><%= clothing[count].name %></td>
-                  <td><%= clothing[count].brand %></td>
-                  <td><%= clothing[count].category %></td>
-                  <td><%= clothing[count].colour %></td>
-                  <td><%= clothing[count].size %></td>
-                  <td><%= clothing[count].price %></td>
+                  <td><%= clothing[count].number %></td>
+                  <td><%= clothing[count].email %></td>
                   <% if(displayName) { %>
                   <td class="text-center"><a href="/clothing-list/edit/<%= clothing[count]._id %>" class="btn btn-primary btn-sm edit"><i class="fas fa-edit fa-sm"></i> Edit</a></td>
                   <td class="text-center"><a href="/clothing-list/delete/<%= clothing[count]._id %>" class="btn btn-danger btn-sm delete"><i class="fas fa-trash-alt fa-sm"></i> Delete</a></td>
